--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django>=5.1.7",
+    "django-cors-headers>=4.7.0",
     "django-taggit>=6.1.0",
     "djangorestframework>=3.16.0",
+    "djangorestframework-simplejwt>=5.5.0",
+    "djoser>=2.3.1",
     "pillow>=11.1.0",
     "psycopg2-binary>=2.9.10",
 ]
